--- a/dashboard/app/globals.css
+++ b/dashboard/app/globals.css
@@ -38,14 +38,7 @@
   --noise: 0;
 }
 
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--color-base-200);
   font-family: Arial, Helvetica, sans-serif;
 }
