--- a/dashboard/app/globals.css
+++ b/dashboard/app/globals.css
@@ -12,7 +12,7 @@
   --color-base-200: oklch(93.299% 0.01 261.788);
   --color-base-300: oklch(89.925% 0.016 262.749);
   --color-base-content: oklch(32.437% 0.022 264.182);
-  --color-primary: oklch(80% 0.105 251.813);
+  --color-primary: oklch(65.06% 0.1109 248.687);
   --color-primary-content: oklch(11.887% 0.015 254.027);
   --color-secondary: oklch(69.651% 0.059 248.687);
   --color-secondary-content: oklch(13.93% 0.011 248.687);
@@ -36,6 +36,11 @@
   --border: 1px;
   --depth: 0;
   --noise: 0;
+}
+
+:root {
+  --color-graph-pink: oklch(66.24% 0.2223 344.32);
+  --color-graph-blue: var(--color-primary);
 }
 
 body {
